test-cases/negative/test_159_invalid_return_type.lay
# negative test: function with invalid return type
# expected: parser should reject this

define function test that takes nothing and returns InvalidType
  return 5


